# whilelang-reverse

./: .gitignore  LICENSE  README.md
docs/: index.md
docs/par_docs/lexer_parser@26bb1931b3ad/Lexer_parser/: index.html
docs/par_docs/lexer_parser@26bb1931b3ad/Lexer_parser__Lexer/: index.html
docs/par_docs/lexer_parser@26bb1931b3ad/Lexer_parser__Parser/: index.html
docs/par_docs/par_interp@26bb1931b3ad/Par_interp/: index.html
docs/par_docs/par_interp@26bb1931b3ad/Par_interp__Annotate/: index.html
docs/par_docs/par_interp@26bb1931b3ad/Par_interp__Ast/: index.html
docs/par_docs/par_interp@26bb1931b3ad/Par_interp__Ast_ann/: index.html
docs/par_docs/par_interp@26bb1931b3ad/Par_interp__Delta/: index.html
docs/par_docs/par_interp@26bb1931b3ad/Par_interp__Interpreter/: index.html
docs/par_docs/par_interp@26bb1931b3ad/Par_interp__Program/: index.html
docs/par_docs/par_interp@26bb1931b3ad/Par_interp__Sigma/: index.html
docs/par_docs/par_interp@26bb1931b3ad/Par_interp__State/: index.html
docs/par_docs/par_interp@26bb1931b3ad/Par_interp__Thread/: index.html
docs/par_docs/print_state@26bb1931b3ad/Print_state/: index.html
docs/serial_docs/lexer_parser@26bb1931b3ad/Lexer_parser__Parser/: index.html
docs/serial_docs/print_state@26bb1931b3ad/Print_state/: index.html
docs/serial_docs/serial_interp@26bb1931b3ad/Serial_interp/: index.html
docs/serial_docs/serial_interp@26bb1931b3ad/Serial_interp__Ast/: index.html
docs/serial_docs/serial_interp@26bb1931b3ad/Serial_interp__Ast_aug/: index.html
docs/serial_docs/serial_interp@26bb1931b3ad/Serial_interp__Augment/: index.html
docs/serial_docs/serial_interp@26bb1931b3ad/Serial_interp__Delta/: index.html
docs/serial_docs/serial_interp@26bb1931b3ad/Serial_interp__Interpreter/: index.html
parallel/: README.md  dune
parallel/src/lib/: annotate.ml  ast.ml  ast_ann.ml  delta.ml  dune  interpreter.ml  program.ml  sigma.ml  state.ml  thread.ml
parallel/src/while_prgs/: prg1.whp  prg2.whp
serial/: README.md
serial/src/: ast.ml  dune  interpreter.ml  state.ml  state.mli  test_interpreter.ml  test_state.ml
serial/src/lib/: ast.ml  interpreter.ml
serial/src/lib/lexer_parser/: dune  parser.mly
serial_augmented/src/: ast_aug.ml  augment.ml  delta.ml  dune  interpreter.ml  print_state.ml  program.ml  sigma.ml  state.ml  test_delta.ml  test_interpreter.ml  test_sigma.ml  test_state.ml  whilelang_main.ml  whilelang_serial.ml
serial_augmented/src/lexer_parser/: dune  lexer.mll  parser.mly
serial_augmented/src/lib/: augment.ml  dune  sigma.ml
serial_augmented/src/while_prgs/: fib_sequence.whr  sum_1_to_n.whr
(+26 files in other folders)
