
; Unit tests

(executable
 (name test_interpreter)
 (modules Test_interpreter)
 (libraries ounit2 interpreter state ast)
)

(executable
 (name test_state)
 (modules Test_state)
 (libraries ounit2 state ast))

 ; Libraries

 (library
  (name interpreter)
  (modules Interpreter)
  (libraries state ast)
)

(library
  (name state)
  (modules State)
  (libraries ast)
)

(library
  (name ast)
  (modules Ast)
)