; Main program

(executable
  (name whilelang_serial)
  (modules Whilelang_serial) 
  (libraries lexer_parser interpreter state augment ast_aug ast print_state)
)


; Unit tests

(executable
 (name test_interpreter)
 (modules Test_interpreter)
 (libraries ounit2 interpreter augment state ast_aug ast)
)

(executable
 (name test_delta)
 (modules Test_delta)
 (libraries ounit2 delta ast))

 (executable
 (name test_sigma)
 (modules Test_sigma)
 (libraries ounit2 sigma ast))

 ; Libraries

 (library
  (name print_state)
  (modules Print_state )
  (libraries ast_aug state program sigma delta)
)

 (library
  (name interpreter)
  (modules Interpreter)
  (libraries augment state sigma ast_aug ast)
)

(library
  (name augment)
  (modules Augment)
  (libraries ast ast_aug state)
)

(library
  (name state)
  (modules State)
  (libraries program sigma delta ast ast_aug)
)

(library
  (name program)
  (modules Program)
  (libraries ast_aug)
)

(library
  (name sigma)
  (modules Sigma)
  (libraries ast ast_aug)
)

(library
  (name delta)
  (modules Delta)
  (libraries ast ast_aug)
)

(library
  (name ast_aug)
  (modules Ast_aug)
  (libraries ast)
)

(library
  (name ast)
  (modules Ast)
)